make my profile prettier

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <div class="container">
     <div class="card">
       <h1><span>PHILIPPE FRANCISCO</span></h1>
-      <h2><span>SENIOR DEV :computer:</span></h2>
+      <h2><span>SENIOR DEV</span></h2>
       <div class="img"><img id="prof" src="images/me.jpg"></div>
        <p>
-        LE MOTO L Fé VROOM VROOM <br>
-        JM BI1 Lé MOTO <br>
-        G SUI 1 ESTHETE
+        LE WAGON C'EST TROP CHOUETTE <br>
+        AVOUES MON SITE <br>
+        IL EST BEAU
       </p>
         <a class="coucou" href="https://img.static-rmg.be/a/view/q75/w620/h414/3381458/5619139-jpg.jpg">HA QUE COUCOU</a>
     </div>
         <div class="card">
-          <p>ABAUNE TOA KOP1</p>
+          <p>POUCE VERT</p>
         <ul>
           <li>
             <a href="https://www.instagram.com" target="_blank">
