make my profile prettier

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
               <i class="fa-brands fa-github"></i>GITHUB
             </a>
           </li>
+          <li>
+            <a href="http://ArthurFoucaud.github.io/profile/" target="_blank">
+              <i class="fa-brands fa-github"></i>GITHUB DU COPAIN
+            </a>
+          </li>
         </ul>
       </div>
     </div>
